# SpaceInvadersServerC

./: CMakeLists.txt  JsonStructure  main.c
Conectividad/: Ssocket.c  Ssocket.h
DataStructures/: LinkedList.h  Utilities.c  Utilities.h
JsonBuilder/: JsonConstructor.c  JsonConstructor.h
Sprites/: Block.c  Block.h  Sprite.c  Sprite.h
Utils/: LinkedList.c  Utilities.c  Utilities.h
